--- a/style.css
+++ b/style.css
@@ -125,14 +125,10 @@ h6 {
   .banner-left > h2,
   .banner1 > h2,
   .banner1 > p {
-    font-size: 30px; 
+    font-size: 30px;
+    text-align: center; 
   }
-   .banner1 > h3,
-  .banner1 > small {
-    font-size: 30px; 
 
-  }
-  
   .card-class{
       display: flex;
       flex-wrap: wrap;
@@ -265,4 +261,15 @@ flex-direction: column;
   flex-direction: column;
   height: 200px;
   justify-content: space-between;
+}
+button:active{
+  transform: scale(1.2);
+  opacity: 0.6;
+}
+a:hover{
+  color: dodgerblue;
+}
+.cards2:active, .cards:active{
+  transform: scale(1.2);
+  opacity: 0.5;
 }
